--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/react-redux": "^7.1.25",
+    "@types/redux-immutable": "^4.0.3",
     "antd": "^5.2.1",
     "axios": "^1.3.3",
     "eslint-plugin-react-hooks": "^4.6.0",
